tests/baselines/reference/unionTypeConstructSignatures.errors.txt
unionTypeConstructSignatures.ts(9,1): error TS2322: Type 'number | Date' is not assignable to type 'string | boolean'.
  Type 'number' is not assignable to type 'string | boolean'.
unionTypeConstructSignatures.ts(9,47): error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
unionTypeConstructSignatures.ts(10,33): error TS2769: No overload matches this call.
  Overload 1 of 2, '(a: number): number | Date', gave the following error.
    Argument of type 'boolean' is not assignable to parameter of type 'number'.
  Overload 2 of 2, '(a: string): string | boolean', gave the following error.
    Argument of type 'boolean' is not assignable to parameter of type 'string'.
unionTypeConstructSignatures.ts(15,33): error TS2769: No overload matches this call.
  Overload 1 of 2, '(a: number): number | Date', gave the following error.
    Argument of type 'boolean' is not assignable to parameter of type 'number'.
  Overload 2 of 2, '(a: string): string | boolean', gave the following error.
    Argument of type 'boolean' is not assignable to parameter of type 'string'.
unionTypeConstructSignatures.ts(16,1): error TS2554: Expected 1 arguments, but got 0.
unionTypeConstructSignatures.ts(19,36): error TS2345: Argument of type '10' is not assignable to parameter of type 'never'.
unionTypeConstructSignatures.ts(20,36): error TS2345: Argument of type '"hello"' is not assignable to parameter of type 'never'.
unionTypeConstructSignatures.ts(21,1): error TS2554: Expected 1 arguments, but got 0.
unionTypeConstructSignatures.ts(24,1): error TS2554: Expected 1 arguments, but got 0.
unionTypeConstructSignatures.ts(26,40): error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
unionTypeConstructSignatures.ts(29,1): error TS2554: Expected 2 arguments, but got 0.
unionTypeConstructSignatures.ts(30,1): error TS2554: Expected 2 arguments, but got 1.
unionTypeConstructSignatures.ts(36,53): error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
unionTypeConstructSignatures.ts(37,12): error TS2554: Expected 1-2 arguments, but got 0.
unionTypeConstructSignatures.ts(40,12): error TS2554: Expected 2 arguments, but got 1.
unionTypeConstructSignatures.ts(42,53): error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
unionTypeConstructSignatures.ts(43,12): error TS2554: Expected 2 arguments, but got 0.
unionTypeConstructSignatures.ts(48,53): error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
unionTypeConstructSignatures.ts(49,12): error TS2554: Expected 1-2 arguments, but got 0.
unionTypeConstructSignatures.ts(55,49): error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
unionTypeConstructSignatures.ts(56,12): error TS2555: Expected at least 1 arguments, but got 0.
unionTypeConstructSignatures.ts(59,12): error TS2554: Expected 2 arguments, but got 1.
unionTypeConstructSignatures.ts(61,53): error TS2554: Expected 2 arguments, but got 3.
unionTypeConstructSignatures.ts(62,49): error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
unionTypeConstructSignatures.ts(63,12): error TS2554: Expected 2 arguments, but got 0.
unionTypeConstructSignatures.ts(69,49): error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
unionTypeConstructSignatures.ts(70,12): error TS2555: Expected at least 1 arguments, but got 0.
unionTypeConstructSignatures.ts(73,1): error TS2511: Cannot create an instance of an abstract class.


==== unionTypeConstructSignatures.ts (28 errors) ====
    var numOrDate: number | Date;
    var strOrBoolean: string | boolean;
    var strOrNum: string | number;
    
    // If each type in U has construct signatures and the sets of construct signatures are identical ignoring return types,
    // U has the same set of construct signatures, but with return types that are unions of the return types of the respective construct signatures from each type in U.
    var unionOfDifferentReturnType: { new (a: number): number; } | { new (a: number): Date; };
    numOrDate = new unionOfDifferentReturnType(10);
    strOrBoolean = new unionOfDifferentReturnType("hello"); // error
    ~~~~~~~~~~~~
!!! error TS2322: Type 'number | Date' is not assignable to type 'string | boolean'.
!!! error TS2322:   Type 'number' is not assignable to type 'string | boolean'.
                                                  ~~~~~~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
    new unionOfDifferentReturnType1(true); // error in type of parameter
                                    ~~~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   Overload 1 of 2, '(a: number): number | Date', gave the following error.
!!! error TS2769:     Argument of type 'boolean' is not assignable to parameter of type 'number'.
!!! error TS2769:   Overload 2 of 2, '(a: string): string | boolean', gave the following error.
!!! error TS2769:     Argument of type 'boolean' is not assignable to parameter of type 'string'.
    
    var unionOfDifferentReturnType1: { new (a: number): number; new (a: string): string; } | { new (a: number): Date; new (a: string): boolean; };
    numOrDate = new unionOfDifferentReturnType1(10);
    strOrBoolean = new unionOfDifferentReturnType1("hello");
    new unionOfDifferentReturnType1(true); // error in type of parameter
                                    ~~~~
!!! error TS2769: No overload matches this call.
!!! error TS2769:   Overload 1 of 2, '(a: number): number | Date', gave the following error.
!!! error TS2769:     Argument of type 'boolean' is not assignable to parameter of type 'number'.
!!! error TS2769:   Overload 2 of 2, '(a: string): string | boolean', gave the following error.
!!! error TS2769:     Argument of type 'boolean' is not assignable to parameter of type 'string'.
    new unionOfDifferentReturnType1(); // error missing parameter
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2554: Expected 1 arguments, but got 0.
!!! related TS6210 unionTypeConstructSignatures.ts:12:41: An argument for 'a' was not provided.
    
    var unionOfDifferentParameterTypes: { new (a: number): number; } | { new (a: string): Date; };
    new unionOfDifferentParameterTypes(10);// error - no call signatures
                                       ~~
!!! error TS2345: Argument of type '10' is not assignable to parameter of type 'never'.
    new unionOfDifferentParameterTypes("hello");// error - no call signatures
                                       ~~~~~~~
!!! error TS2345: Argument of type '"hello"' is not assignable to parameter of type 'never'.
    new unionOfDifferentParameterTypes();// error - no call signatures
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2554: Expected 1 arguments, but got 0.
!!! related TS6210 unionTypeConstructSignatures.ts:18:44: An argument for 'a' was not provided.
    
    var unionOfDifferentNumberOfSignatures: { new (a: number): number; } | { new (a: number): Date; new (a: string): boolean; };
    new unionOfDifferentNumberOfSignatures(); // error - no call signatures
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2554: Expected 1 arguments, but got 0.
!!! related TS6210 unionTypeConstructSignatures.ts:23:48: An argument for 'a' was not provided.
    new unionOfDifferentNumberOfSignatures(10); // error - no call signatures
    new unionOfDifferentNumberOfSignatures("hello"); // error - no call signatures
                                           ~~~~~~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
    
    var unionWithDifferentParameterCount: { new (a: string): string; } | { new (a: string, b: number): number; };
    new unionWithDifferentParameterCount();// needs more args
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2554: Expected 2 arguments, but got 0.
!!! related TS6210 unionTypeConstructSignatures.ts:28:77: An argument for 'a' was not provided.
    new unionWithDifferentParameterCount("hello");// needs more args
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2554: Expected 2 arguments, but got 1.
!!! related TS6210 unionTypeConstructSignatures.ts:28:88: An argument for 'b' was not provided.
    new unionWithDifferentParameterCount("hello", 10);// ok
    
    var unionWithOptionalParameter1: { new (a: string, b?: number): string; } | { new (a: string, b?: number): number; };
    strOrNum = new unionWithOptionalParameter1('hello');
    strOrNum = new unionWithOptionalParameter1('hello', 10);
    strOrNum = new unionWithOptionalParameter1('hello', "hello"); // error in parameter type
                                                        ~~~~~~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
    strOrNum = new unionWithOptionalParameter1(); // error
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2554: Expected 1-2 arguments, but got 0.
!!! related TS6210 unionTypeConstructSignatures.ts:33:41: An argument for 'a' was not provided.
    
    var unionWithOptionalParameter2: { new (a: string, b?: number): string; } | { new (a: string, b: number): number };
    strOrNum = new unionWithOptionalParameter2('hello'); // error no call signature
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2554: Expected 2 arguments, but got 1.
!!! related TS6210 unionTypeConstructSignatures.ts:39:95: An argument for 'b' was not provided.
    strOrNum = new unionWithOptionalParameter2('hello', 10); // error no call signature
    strOrNum = new unionWithOptionalParameter2('hello', "hello"); // error no call signature
                                                        ~~~~~~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
    strOrNum = new unionWithOptionalParameter2(); // error no call signature
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2554: Expected 2 arguments, but got 0.
!!! related TS6210 unionTypeConstructSignatures.ts:39:84: An argument for 'a' was not provided.
    
    var unionWithOptionalParameter3: { new (a: string, b?: number): string; } | { new (a: string): number; };
    strOrNum = new unionWithOptionalParameter3('hello'); // error no call signature
    strOrNum = new unionWithOptionalParameter3('hello', 10); // ok
    strOrNum = new unionWithOptionalParameter3('hello', "hello"); // wrong type
                                                        ~~~~~~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
    strOrNum = new unionWithOptionalParameter3(); // error no call signature
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2554: Expected 1-2 arguments, but got 0.
!!! related TS6210 unionTypeConstructSignatures.ts:45:41: An argument for 'a' was not provided.
    
    var unionWithRestParameter1: { new (a: string, ...b: number[]): string; } | { new (a: string, ...b: number[]): number };
    strOrNum = new unionWithRestParameter1('hello');
    strOrNum = new unionWithRestParameter1('hello', 10);
    strOrNum = new unionWithRestParameter1('hello', 10, 11);
    strOrNum = new unionWithRestParameter1('hello', "hello"); // error in parameter type
                                                    ~~~~~~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
    strOrNum = new unionWithRestParameter1(); // error
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2555: Expected at least 1 arguments, but got 0.
!!! related TS6210 unionTypeConstructSignatures.ts:51:37: An argument for 'a' was not provided.
    
    var unionWithRestParameter2: { new (a: string, ...b: number[]): string; } | { new (a: string, b: number): number };
    strOrNum = new unionWithRestParameter2('hello'); // error no call signature
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2554: Expected 2 arguments, but got 1.
!!! related TS6210 unionTypeConstructSignatures.ts:58:95: An argument for 'b' was not provided.
    strOrNum = new unionWithRestParameter2('hello', 10); // error no call signature
    strOrNum = new unionWithRestParameter2('hello', 10, 11); // error no call signature
                                                        ~~
!!! error TS2554: Expected 2 arguments, but got 3.
    strOrNum = new unionWithRestParameter2('hello', "hello"); // error no call signature
                                                    ~~~~~~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
    strOrNum = new unionWithRestParameter2(); // error no call signature
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2554: Expected 2 arguments, but got 0.
!!! related TS6210 unionTypeConstructSignatures.ts:58:84: An argument for 'a' was not provided.
    
    var unionWithRestParameter3: { new (a: string, ...b: number[]): string; } | { new (a: string): number };
    strOrNum = new unionWithRestParameter3('hello'); // error no call signature
    strOrNum = new unionWithRestParameter3('hello', 10); // ok
    strOrNum = new unionWithRestParameter3('hello', 10, 11); // ok
    strOrNum = new unionWithRestParameter3('hello', "hello"); // wrong type
                                                    ~~~~~~~
!!! error TS2345: Argument of type 'string' is not assignable to parameter of type 'number'.
    strOrNum = new unionWithRestParameter3(); // error no call signature
               ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2555: Expected at least 1 arguments, but got 0.
!!! related TS6210 unionTypeConstructSignatures.ts:65:37: An argument for 'a' was not provided.
    
    var unionWithAbstractSignature: (abstract new (a: string) => string) | (new (a: string) => string);
    new unionWithAbstractSignature('hello');
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2511: Cannot create an instance of an abstract class.
    